# ecs-physics

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/FeatureTesting/: CMakeLists.txt  main.cpp
examples/HelloWorld/: CMakeLists.txt  main.cpp
examples/RaylibDemo/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/include/ECS/: ComponentPool.h  Entity.h  Registry.h
lib/include/Math/: Math.h  Matrix3x3.h  Quaternion.h  Vector3.h
lib/include/Physics/: Components.h  GravitySystem.h  World.h
lib/include/Physics/Colliders/: AABBCollider.h  BaseCollider.h  ColliderBounds.h  ColliderFuncs.h  ColliderRegistry.h  ColliderType.h  OBBCollider.h  SphereCollider.h
lib/include/Physics/Collision/: ColliderComponents.h  CollidersUtil.h  Collision.h  ICollisionDetectionSystem.h  ICollisionResolutionSystem.h  ImpulseSolver.h  IterativeCollisionDetection.h  ProjectionAndImpulseSolver.h  ProjectionSolver.h
lib/include/Physics/Integrators/: EulerSemiImplicit.h  IntegrationSystem.h
lib/include/Physics/Motion/: GravitySystem.h  MotionComponents.h  RotateInertiaTensorSystem.h
lib/include/Physics/Raycast/: IRaycastSystem.h  IterativeRaycaster.h  Ray.h  RayHit.h  RaycastUtil.h
lib/src/: World.cpp
lib/src/Physics/: GravitySystem.cpp  World.cpp
lib/src/Physics/Colliders/: AABBCollider.cpp  ColliderFuncs.cpp  ColliderType.cpp  OBBCollider.cpp  SphereCollider.cpp
lib/src/Physics/Collision/: CollidersUtil.cpp  ImpulseSolver.cpp  IterativeCollisionDetection.cpp  ProjectionSolver.cpp
lib/src/Physics/Integrators/: EulerSemiImplicit.cpp
(+11 files in other folders)
